--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"prettier-plugin-svelte": "^2.10.0",
 		"prism-themes": "^1.9.0",
 		"publint": "^0.1.11",
+		"sass": "^1.62.1",
 		"svelte": "^3.59.0",
 		"svelte-check": "^3.3.1",
 		"svelte-meta-tags": "^2.7.0",
@@ -81,7 +82,8 @@
 		"@docsearch/js": "^3.3.4",
 		"@popperjs/core": "^2.11.7",
 		"classnames": "^2.3.2",
-		"flowbite": "^1.6.5"
+		"flowbite": "^1.6.5",
+		"pdfjs-dist": "^3.6.172"
 	},
 	"engines": {
 		"npm": ">=7.0.0",
