--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "svelteuse",
-	"version": "0.0.2",
+	"name": "sveltuse",
+	"version": "0.0.1",
 	"description": "Collection of Essential Svelte Composition Utilities",
 	"main": "dist/index.js",
 	"author": {
@@ -8,8 +8,8 @@
 		"email": "rkanik.me@gmail.com",
 		"url": "https://rkanik.pages.dev/"
 	},
-	"bugs": "https://github.com/rkanik/sveluse/issues",
-	"homepage": "https://github.com/rkanik/sveluse",
+	"bugs": "https://github.com/rkanik/sveltuse/issues",
+	"homepage": "https://github.com/rkanik/sveltuse",
 	"license": "MIT",
 	"scripts": {
 		"dev": "vite dev",
@@ -38,7 +38,7 @@
 		"@playwright/test": "^1.33.0",
 		"@sveltejs/adapter-vercel": "^2.4.3",
 		"@sveltejs/kit": "^1.16.2",
-		"@sveltejs/package": "2.0.2",
+		"@sveltejs/package": "^2.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.59.2",
 		"@typescript-eslint/parser": "^5.59.2",
 		"autoprefixer": "^10.4.14",
@@ -54,7 +54,7 @@
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.0",
 		"prism-themes": "^1.9.0",
-		"publint": "^0.1.11",
+		"publint": "^0.1.9",
 		"sass": "^1.62.1",
 		"svelte": "^3.59.0",
 		"svelte-check": "^3.3.1",
@@ -76,7 +76,7 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/rkanik/sveluse"
+		"url": "https://github.com/rkanik/sveltuse"
 	},
 	"dependencies": {
 		"@docsearch/js": "^3.3.4",
@@ -90,9 +90,16 @@
 		"npm": ">=7.0.0",
 		"node": ">=16.0.0"
 	},
-	"exports": {},
+	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"svelte": "./dist/index.js"
+		}
+	},
 	"files": [
-		"dist"
+		"dist",
+		"!dist/**/*.test.*",
+		"!dist/**/*.spec.*"
 	],
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
