--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.33.0",
+		"@sveltejs/adapter-cloudflare": "^2.2.4",
 		"@sveltejs/adapter-vercel": "^2.4.3",
 		"@sveltejs/kit": "^1.16.2",
 		"@sveltejs/package": "^2.0.0",
