--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-	"cSpell.words": ["Anik", "mdsvex", "sveltuse", "Sveluse"],
+	"cSpell.words": ["Anik", "mdsvex", "Pausable", "sveltuse", "Sveluse"],
 	"editor.detectIndentation": false,
 	"editor.formatOnSave": true
 }
