--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"svelte": "^3.55.1"
 	},
 	"devDependencies": {
+		"@iconify/svelte": "^3.1.3",
 		"@playwright/test": "^1.33.0",
 		"@sveltejs/adapter-cloudflare": "^2.2.4",
 		"@sveltejs/adapter-vercel": "^2.4.3",
