--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,6 +1,6 @@
-name: "\U0001F41E Bug report"
-description: Report an issue with Flowbite-Svelte
-labels: ['triage: bug']
+name: 🐞 Bug report
+description: Report an issue with Sveltuse
+labels: [pending triage]
 body:
   - type: markdown
     attributes:
@@ -14,20 +14,43 @@ body:
       placeholder: Bug description
     validations:
       required: true
-  - type: textarea
+  - type: input
     id: reproduction
     attributes:
       label: Reproduction
-      description: Please provide a link to a repo or REPL that can reproduce the problem you ran into. Use [this Stackblitz template](https://stackblitz.com/edit/sveltejs-kit-template-default-efqgaq) or [Flowbite-Svelte template](https://svelte.dev/repl/930d39fbd10b4e5b8581fb20d3a3192e) to add your code. If a report is vague (e.g. just a generic error message) and has no reproduction, it will receive a "need reproduction" label. If no reproduction is provided within a reasonable time-frame, the issue will be closed.
-      placeholder: REPL
+      description: Please provide a link via [sveltuse](https://stackblitz.com/edit/sveltuse?file=src%2Froutes%2F%2Bpage.svelte) or a link to a repo that can reproduce the problem you ran into. A [minimal reproduction](https://stackoverflow.com/help/minimal-reproducible-example) is required.
+      placeholder: Reproduction
     validations:
       required: true
   - type: textarea
     id: system-info
     attributes:
-      label: Flowbite version and System Info
-      description: Output of `npx envinfo --system --npmPackages svelte,@sveltejs/kit,flowbite-svelte,vite,rollup,webpack --binaries --browsers`
-      render: shell
-      placeholder: Version, System, Binaries, Browsers
+      label: System Info
+      description: Output of `npx envinfo --system --npmPackages '{sveltuse}' --binaries --browsers`
+      render: Shell
+      placeholder: System, Binaries, Browsers
     validations:
       required: true
+  - type: dropdown
+    id: package-manager
+    attributes:
+      label: Used Package Manager
+      description: Select the used package manager
+      options:
+        - npm
+        - yarn
+        - pnpm
+    validations:
+      required: true
+  - type: checkboxes
+    id: checkboxes
+    attributes:
+      label: Validations
+      description: Before submitting the issue, please make sure you do the following
+      options:
+        - label: Check that there isn't [already an issue](https://github.com/rkanik/sveltuse/issues) that reports the same bug to avoid creating a duplicate.
+          required: true
+        - label: Check that this is a concrete bug. For Q&A open a [GitHub Discussion](https://github.com/rkanik/sveltuse/discussions).
+          required: true
+        - label: The provided reproduction is a [minimal reproducible example](https://stackoverflow.com/help/minimal-reproducible-example) of the bug.
+          required: true
