--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
 	"name": "sveltuse",
 	"version": "0.0.4",
 	"description": "Collection of Essential Svelte Composition Utilities",
+	"type": "module",
 	"main": "dist/index.js",
+	"svelte": "dist/index.js",
+	"types": "dist/index.d.ts",
 	"author": {
 		"name": "RK Anik",
 		"email": "rkanik.me@gmail.com",
@@ -10,7 +13,6 @@
 	},
 	"bugs": "https://github.com/rkanik/sveltuse/issues",
 	"homepage": "https://github.com/rkanik/sveltuse",
-	"license": "MIT",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -28,11 +30,15 @@
 		"package:publish": "standard-version && git push --follow-tags origin main && npm run package && npm publish",
 		"gen:props": "createprops"
 	},
-	"peerDependencies": {
-		"@popperjs/core": "^2.11.6",
+	"dependencies": {
+		"@docsearch/js": "^3.3.4",
+		"@popperjs/core": "^2.11.7",
 		"classnames": "^2.3.2",
-		"flowbite": "^1.6.3",
-		"svelte": "^3.55.1"
+		"flowbite": "^1.6.5",
+		"flowbite-svelte": "^0.36.2"
+	},
+	"peerDependencies": {
+		"svelte": "^3.54.0"
 	},
 	"devDependencies": {
 		"@iconify/svelte": "^3.1.3",
@@ -58,6 +64,7 @@
 		"prism-themes": "^1.9.0",
 		"publint": "^0.1.9",
 		"sass": "^1.62.1",
+		"standard-version": "^9.5.0",
 		"svelte": "^3.59.0",
 		"svelte-check": "^3.3.1",
 		"svelte-meta-tags": "^2.7.0",
@@ -69,7 +76,6 @@
 		"vite": "^4.3.5",
 		"vitest": "^0.31.0"
 	},
-	"type": "module",
 	"keywords": [
 		"svelte",
 		"sveltekit",
@@ -86,14 +92,6 @@
 		"type": "git",
 		"url": "https://github.com/rkanik/sveltuse"
 	},
-	"dependencies": {
-		"@docsearch/js": "^3.3.4",
-		"@popperjs/core": "^2.11.7",
-		"classnames": "^2.3.2",
-		"flowbite": "^1.6.5",
-		"flowbite-svelte": "^0.36.2",
-		"pdfjs-dist": "^3.6.172"
-	},
 	"engines": {
 		"npm": ">=7.0.0",
 		"node": ">=16.0.0"
@@ -107,11 +105,12 @@
 	"files": [
 		"dist",
 		"!dist/**/*.test.*",
-		"!dist/**/*.spec.*"
+		"!dist/**/*.spec.*",
+		"!dist/**/*.svelte",
+		"!dist/**/*.svelte.*"
 	],
-	"svelte": "./dist/index.js",
-	"types": "./dist/index.d.ts",
 	"contributors": [
 		"RK Anik <rkanik.me@gmail.com>"
-	]
+	],
+	"license": "MIT"
 }
