--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "Collection of Essential Svelte Composition Utilities",
 	"type": "module",
 	"main": "dist/index.js",
-	"svelte": "dist/index.js",
-	"types": "dist/index.d.ts",
+	"svelte": "./dist/index.js",
+	"types": "./dist/index.d.ts",
 	"author": {
 		"name": "RK Anik",
 		"email": "rkanik.me@gmail.com",
