--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
 		"svelte-meta-tags": "^2.7.0",
 		"svelte-preprocess": "^5.0.3",
 		"svelte2tsx": "^0.6.13",
+		"sveltekit-sitemap": "^1.0.21",
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.5.0",
 		"typescript": "^5.0.4",
