--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"@typescript-eslint/parser": "^5.59.2",
 		"autoprefixer": "^10.4.14",
 		"createprops": "^0.6.1",
+		"darkreader": "^4.9.58",
 		"esbuild": "0.17.18",
 		"eslint": "^8.40.0",
 		"eslint-config-prettier": "^8.8.0",
