--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"test": "playwright test",
+		"pkg:dev": "svelte-package --watch",
+		"pkg:build": "svelte-kit sync && svelte-package && publint",
+		"pkg:publish": "standard-version && git push --follow-tags origin main && npm run pkg:build && npm publish",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"test:unit": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
 		"write-package-json": "node ./scripts/package-json-writer.js",
-		"add-exports": "node ./scripts/add-exports-to-package-json.js",
+		"add-exports": "node ./scripts/add-exports-to-package-json.js && pn format",
 		"gen:props": "createprops",
-		"package": "svelte-kit sync && svelte-package && publint",
-		"package:publish": "standard-version && git push --follow-tags origin main && npm run package && npm publish",
 		"lighthouse": "npx unlighthouse"
 	},
 	"dependencies": {
@@ -46,6 +47,7 @@
 		"@sveltejs/adapter-cloudflare": "^2.2.4",
 		"@sveltejs/kit": "^1.16.2",
 		"@sveltejs/package": "^2.0.0",
+		"@types/sortablejs": "^1.15.1",
 		"@typescript-eslint/eslint-plugin": "^5.59.2",
 		"@typescript-eslint/parser": "^5.59.2",
 		"autoprefixer": "^10.4.14",
@@ -64,6 +66,7 @@
 		"prism-themes": "^1.9.0",
 		"publint": "^0.1.9",
 		"sass": "^1.62.1",
+		"sortablejs": "^1.15.0",
 		"standard-version": "^9.5.0",
 		"svelte": "^3.59.0",
 		"svelte-check": "^3.3.1",
@@ -110,6 +113,10 @@
 	],
 	"license": "MIT",
 	"exports": {
+		"./useArray": {
+			"types": "./dist/core/useArray/index.d.ts",
+			"svelte": "./dist/core/useArray/index.js"
+		},
 		"./useBreakpoints": {
 			"types": "./dist/core/useBreakpoints/index.d.ts",
 			"svelte": "./dist/core/useBreakpoints/index.js"
@@ -230,9 +237,17 @@
 			"types": "./dist/core/useWindowScroll/index.d.ts",
 			"svelte": "./dist/core/useWindowScroll/index.js"
 		},
+		"./useDarkReader": {
+			"types": "./dist/integrations/useDarkReader/index.d.ts",
+			"svelte": "./dist/integrations/useDarkReader/index.js"
+		},
 		"./usePDF": {
 			"types": "./dist/integrations/usePDF/index.d.ts",
 			"svelte": "./dist/integrations/usePDF/index.js"
+		},
+		"./useSortable": {
+			"types": "./dist/integrations/useSortable/index.d.ts",
+			"svelte": "./dist/integrations/useSortable/index.js"
 		},
 		".": {
 			"types": "./dist/index.d.ts",
