--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sveltuse",
-	"version": "0.0.12",
+	"version": "0.0.13",
 	"description": "Collection of Essential Svelte Composition Utilities",
 	"type": "module",
 	"main": "dist/index.js",
@@ -19,7 +19,7 @@
 		"preview": "vite preview",
 		"test": "playwright test",
 		"pkg:dev": "svelte-package --watch",
-		"pkg:build": "svelte-kit sync && svelte-package && publint",
+		"pkg:build": "svelte-kit sync && svelte-package",
 		"pkg:publish": "standard-version && git push --follow-tags origin main && npm run pkg:build && npm publish",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
