--- a/package.json
+++ b/package.json
@@ -31,17 +31,29 @@
 		"gen:props": "createprops",
 		"lighthouse": "npx unlighthouse"
 	},
-	"dependencies": {
+	"peerDependencies": {
+		"svelte": "*",
+		"darkreader": "*",
+		"sortablejs": "*",
+		"@types/sortablejs": "*"
+	},
+	"peerDependenciesMeta": {
+		"darkreader": {
+			"optional": true
+		},
+		"sortablejs": {
+			"optional": true
+		},
+		"@types/sortablejs": {
+			"optional": true
+		}
+	},
+	"devDependencies": {
 		"@docsearch/js": "^3.3.4",
 		"@popperjs/core": "^2.11.7",
 		"classnames": "^2.3.2",
 		"flowbite": "^1.6.5",
-		"flowbite-svelte": "^0.36.2"
-	},
-	"peerDependencies": {
-		"svelte": "^3.54.0"
-	},
-	"devDependencies": {
+		"flowbite-svelte": "^0.36.2",
 		"@iconify/svelte": "^3.1.3",
 		"@playwright/test": "^1.33.0",
 		"@sveltejs/adapter-cloudflare": "^2.2.4",
