--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sveltuse",
-	"version": "0.0.14",
+	"version": "0.0.15",
 	"description": "Collection of Essential Svelte Composition Utilities",
 	"type": "module",
 	"main": "dist/index.js",
@@ -32,10 +32,10 @@
 		"lighthouse": "npx unlighthouse"
 	},
 	"peerDependencies": {
-		"svelte": "*",
+		"@types/sortablejs": "*",
 		"darkreader": "*",
 		"sortablejs": "*",
-		"@types/sortablejs": "*"
+		"svelte": "*"
 	},
 	"peerDependenciesMeta": {
 		"darkreader": {
@@ -50,12 +50,9 @@
 	},
 	"devDependencies": {
 		"@docsearch/js": "^3.3.4",
-		"@popperjs/core": "^2.11.7",
-		"classnames": "^2.3.2",
-		"flowbite": "^1.6.5",
-		"flowbite-svelte": "^0.36.2",
 		"@iconify/svelte": "^3.1.3",
 		"@playwright/test": "^1.33.0",
+		"@popperjs/core": "^2.11.7",
 		"@sveltejs/adapter-cloudflare": "^2.2.4",
 		"@sveltejs/kit": "^1.16.2",
 		"@sveltejs/package": "^2.0.0",
@@ -63,14 +60,18 @@
 		"@typescript-eslint/eslint-plugin": "^5.59.2",
 		"@typescript-eslint/parser": "^5.59.2",
 		"autoprefixer": "^10.4.14",
+		"classnames": "^2.3.2",
 		"createprops": "^0.6.1",
 		"darkreader": "^4.9.58",
 		"esbuild": "0.17.18",
 		"eslint": "^8.40.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"flowbite": "^1.6.5",
+		"flowbite-svelte": "^0.36.2",
 		"mdsvex": "^0.10.6",
 		"mdsvexamples": "^0.3.3",
+		"nodemon": "^2.0.22",
 		"postcss": "^8.4.23",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.8",
@@ -375,6 +376,14 @@
 		"./dist/core/useWindowScroll": {
 			"types": "./dist/core/useWindowScroll/index.d.ts",
 			"default": "./dist/core/useWindowScroll/index.js"
+		},
+		"./dist/useOffsetPagination": {
+			"types": "./dist/core/useOffsetPagination/index.d.ts",
+			"default": "./dist/core/useOffsetPagination/index.js"
+		},
+		"./dist/core/useOffsetPagination": {
+			"types": "./dist/core/useOffsetPagination/index.d.ts",
+			"default": "./dist/core/useOffsetPagination/index.js"
 		},
 		"./useDarkReader": {
 			"types": "./dist/integrations/useDarkReader/index.d.ts",
