--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"test": "playwright test",
 		"pkg:dev": "svelte-package --watch",
 		"pkg:build": "svelte-kit sync && svelte-package",
-		"pkg:publish": "standard-version && git push --follow-tags origin main && npm run pkg:build && npm publish",
+		"pkg:publish": "standard-version && git push --follow-tags origin main && npm publish",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"test:unit": "vitest",
